// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesFilter > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group"
      >
        <button
          class="ring-focus css-14zm422"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders-vertical"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      aria-controls=":r2:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group"
      >
        <button
          class="ring-focus css-14zm422"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders-vertical"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      aria-controls=":r5:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group"
      >
        <button
          class="ring-focus css-14zm422"
        >
          <div
            class="absolute right-1 top-0.5 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear"
          >
            <div
              class="h-2 w-2 rounded-full bg-theme-primary-500"
            />
          </div>
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders-vertical"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      aria-controls=":r8:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group"
      >
        <button
          class="ring-focus css-14zm422"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders-vertical"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
